[gd_scene load_steps=6 format=3 uid="uid://662ivfos4fue"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_erwo8"]
[ext_resource type="Texture2D" uid="uid://486f7o5cvqhs" path="res://textures/big_zombie.png" id="4_qweaa"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ejoij"]
light_mode = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_pdxxf"]
radius = 14.0357

[sub_resource type="CircleShape2D" id="CircleShape2D_12256"]
radius = 21.0238

[node name="enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_erwo8")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.427451, 0.427451, 0.427451, 1)
material = SubResource("CanvasItemMaterial_ejoij")
position = Vector2(4.76837e-07, -2.84217e-14)
rotation = 1.57079
scale = Vector2(0.06, 0.06)
texture = ExtResource("4_qweaa")
region_rect = Rect2(-0.780212, -4.24907, 676.967, 692.529)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8, 0)
shape = SubResource("CircleShape2D_pdxxf")
debug_color = Color(0.992157, 0, 0.278431, 0.419608)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0

[node name="DamageCollision" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_12256")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_damage_area_body_exited"]
